# proxy-hub

./: .agent-harness.yml  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CLAUDE.md  INTEGRATION.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
.harness/: conftest-data.json
.harness/policy/compose/: escaping.rego  hostname.rego  images.rego  services.rego
.harness/policy/dockerfile/: base_image.rego  cache.rego  healthcheck.rego  layers.rego  secrets.rego  user.rego
.harness/policy/gitignore/: secrets.rego
docs/guidelines/: deployment.md
docs/superpowers/plans/: 2026-03-14-proxy-hub-mvp.md  2026-03-14-proxy-scanner.md
docs/superpowers/specs/: 2026-03-14-proxy-hub-mvp-design.md  2026-03-14-proxy-scanner-design.md
g3proxy/: .agent-harness.yml  .pre-commit-config.yaml  Dockerfile  entrypoint.sh
g3proxy/config/: g3proxy.yaml.tmpl
health-checker/: .agent-harness.yml  Dockerfile  Makefile  health-check.sh  health_check.py  pyproject.toml
laptop/: Dockerfile  Makefile  setup.sh
proxy-api/: .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml  requirements.txt
proxy-api/proxy_api/: app.py  main.py  pool_manager.py  reputation.py  scanner.py  scanner_stats.py  selector.py  source_fetcher.py  stats.py  validators.py
proxy-api/tests/: test_app.py  test_main.py  test_pool_manager.py  test_reputation.py  test_scanner.py  test_scanner_stats.py  test_selector.py  test_source_fetcher.py  test_stats.py  test_validators.py
proxy-scanner/: .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
proxy-scanner/proxy_scanner/: main.py  pool_manager.py  source_fetcher.py  stats.py  validators.py
proxy-scanner/scripts/: check-file-length.py  check-json.py
proxy-scanner/tests/: conftest.py  test_main.py  test_pool_manager.py  test_source_fetcher.py  test_stats.py  test_validators.py
