[project]
name = "health-checker"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "redis>=5.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14",
    "ty>=0.0.13",
]

[tool.ruff]
target-version = "py313"
line-length = 140
output-format = "concise"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "UP", "B", "S", "RUF"]
ignore = ["S106"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ty.environment]
python-version = "3.13"
