[project]
name = "proxy-scanner"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11",
    "aiohttp-socks>=0.10",
    "redis>=5.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-cov>=6.0",
    "pytest-asyncio>=1.0",
    "diff-cover>=9.0",
    "ruff>=0.14",
    "ty>=0.0.13",
    "fakeredis[aioredis]>=2.26",
    "aioresponses>=0.7",
]

[tool.ruff]
target-version = "py313"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
possibly-unresolved-reference = "error"
invalid-argument-type = "error"
missing-argument = "error"
unsupported-operator = "error"
division-by-zero = "error"
unused-ignore-comment = "warn"
redundant-cast = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --strict-markers --cov --cov-report=term:skip-covered --cov-report=xml --cov-fail-under=95"
markers = [
    "unit: pure logic, no I/O",
    "integration: requires Redis or mocked HTTP",
]

[tool.coverage.run]
source = ["proxy_scanner"]
branch = true
omit = ["proxy_scanner/main.py"]

[tool.coverage.report]
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
